--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "prettier": "^3.0.3",
     "vite": "^5.0.11"
   }
