--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@better-scroll/core": "^2.5.1",
+    "@better-scroll/observe-dom": "^2.5.1",
     "@better-scroll/slide": "^2.5.1",
     "axios": "^1.6.7",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-lazy": "1.0.0-alpha.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
