--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "js-base64": "^3.7.7",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
-    "pinyin": "4.0.0-alpha.0",
+    "pinyin": "2",
     "prettier": "^3.0.3",
     "vite": "^5.0.11"
   }
