--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@better-scroll/observe-dom": "^2.5.1",
     "@better-scroll/slide": "^2.5.1",
     "axios": "^1.6.7",
+    "lyric-parser": "^1.0.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
