--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@better-scroll/core": "^2.5.1",
     "@better-scroll/observe-dom": "^2.5.1",
+    "@better-scroll/pull-up": "^2.5.1",
     "@better-scroll/slide": "^2.5.1",
     "axios": "^1.6.7",
     "create-keyframe-animation": "^0.1.0",
     "lyric-parser": "^1.0.1",
     "pinia": "^2.1.7",
+    "throttle-debounce": "^5.0.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
     "vue3-lazy": "1.0.0-alpha.1"
