--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "deploy": "npm run build && nohup node backend/prod.server.js &"
   },
   "dependencies": {
     "@better-scroll/core": "^2.5.1",
@@ -29,13 +30,16 @@
     "@vitejs/plugin-vue": "^5.0.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-prettier": "^8.0.0",
+    "compression": "^1.7.4",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "express": "^4.18.2",
     "js-base64": "^3.7.7",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "pinyin": "2",
     "prettier": "^3.0.3",
-    "vite": "^5.0.11"
+    "vite": "^5.0.11",
+    "xsrf": "^1.0.0"
   }
 }
