--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "express": "^4.18.2",
